<resources>
    <string name="app_name">&appname;!</string>
    <string name="install_button">Download</string>
    <string name="remove_button">Uninstall</string>
    <string name="update_button">Update</string>
    <string name="refresh_button">Reload</string>
    <string name="confirm_uninstall_title">Confirm uninstall</string>
    <string name="confirm_uninstall">"You won't be able to send these stickers unless you re-download this pack. "</string>
    <plurals name="confirm_uninstall_n_custom_stickers">
        <item quantity="one">%d edited sticker will be permanently deleted.</item>
        <item quantity="other">%d edited stickers will be permanently deleted.</item>
    </plurals>
    <string name="confirm_delete_button">Confirm deletion</string>
    <string name="confirm_delete_text">This cannot be undone</string>
    <string name="text_above_pack_list">Click a pack to view its stickers</string>
    <string name="cant_load_pack_list_label">The list of available but not-yet-installed packs couldn\'t be downloaded.</string>
    <plurals name="new_stickers_report">
        <item quantity="one">%d new sticker added recently</item>
        <item quantity="other">%d new stickers added recently</item>
    </plurals>
    <string name="notif_channel_new_stickers_name">New Stickers</string>
    <string name="notif_channel_new_stickers_description">Notifications for new stickers</string>
    <string name="notif_channel_new_pack_name">New Sticker Pack</string>
    <string name="notif_channel_new_pack_description">Notifications for new sticker packs</string>
    <string name="notif_channel_misc">Miscellaneous</string>
    <string name="title_activity_sticker_pack_viewer">Sticker Pack Viewer</string>
    <string name="sticker_pack_viewer_no_packs_installed">No sticker packs are installed right now. Install some from the main screen.</string>
    <string name="sticker_pack_viewer_no_matches">No stickers match your search.</string>
    <string name="search_hint">Search stickers…</string>
    <string name="search_installed_hint">Search installed stickers…</string>
    <string name="uninstalled_stickers_warning">These stickers aren\'t currently installed, so they can\'t be sent to others. Download the pack to change this.</string>
    <plurals name="stickers_available_in_update">
        <item quantity="one">This sticker will be added if you update this pack</item>
        <item quantity="other">These %d stickers will be added if you update this pack</item>
    </plurals>
    <plurals name="new_stickers_in_update">
        <item quantity="one">This new sticker was added recently</item>
        <item quantity="other">These %d new stickers were added recently</item>
    </plurals>
    <plurals name="pack_info">
        <item quantity="one">%d sticker | %.1f MB</item>
        <item quantity="other">%d stickers | %.1f MB</item>
    </plurals>
    <string name="view_licenses_title">Licenses for Open Source Libraries</string>
    <string name="view_privacy_policy_title">Privacy Policy</string>
    <string name="view_onboard">Show intro/help</string>
    <string name="settings">Settings</string>
    <string name="send_feedback">Send feedback</string>
    <string name="send_feedback_share_label">Send feedback via email:</string>
    <string name="start_ar">Launch AR stickers</string>
    <string name="search">Search stickers</string>
    <string name="filter">Filter stickers</string>
    <string name="title_activity_ar">AR Mode</string>
    <string name="need_ext_storage_perm">&appname; needs access to your device storage to save photos and videos. Tap OK to proceed.</string>
    <string name="need_mic_perm">No mic access</string>
    <string name="need_mic_perm_action">More…</string>
    <string name="may_need_arcore_title">ARCore Needed</string>
    <string name="may_need_arcore">Augmented Reality Mode uses Google\'s ARCore. You may be prompted to install or update ARCore.</string>
    <string name="back_button">Back</string>
    <string name="delete_button">Delete</string>
    <string name="open_externally_button">Open externally</string>
    <string name="share_button">Share</string>
    <string name="edit_button">Edit</string>
    <string name="play_button">Play video</string>
    <string name="send_button">Send</string>
    <string name="save_button">Save as a copy</string>
    <string name="color_button">Color</string>
    <string name="width_button">Text box width</string>
    <string name="flip_sticker_button">Mirror sticker</string>
    <string name="flip_text_button">Mirror text box</string>
    <string name="add_text_box">Add text box</string>
    <string name="width_slider">Adjust text box width</string>
    <string name="share_text">Share image via…</string>
    <string name="config_share_text">Save configuration via…</string>
    <string name="take_photo">Take a photo</string>
    <string name="take_video">Record a video</string>
    <string name="take_video_stop">Stop recording a video</string>
    <string name="switch_to_video">Switch to video mode</string>
    <string name="switch_to_photo">Switch to still photo mode</string>
    <string name="photo_preview">View the photos and videos you\'ve taken</string>
    <string name="title_activity_editor">&appname; Editor</string>
    <string name="editor_share_target">Edit in Finn Stickers</string>
    <string name="color_picker_text">Text</string>
    <string name="color_picker_outline">Outline</string>
    <string name="editor_confirm_exit_title">Save this sticker?</string>
    <string name="editor_confirm_exit_text">Your changes will be lost if you leave without saving.\n\nSaving will make a copy and will not overwrite your original sticker.</string>
    <string name="editor_confirm_exit_save">Save</string>
    <string name="editor_confirm_exit_dont_save">Don\'t Save</string>
    <string name="editor_confirm_exit_cancel">Cancel</string>
    <string name="editor_confirm_exit_no_save_title">Close this sticker?</string>
    <string name="editor_confirm_exit_no_save_text">Your changes cannot be saved.</string>
    <string name="editor_confirm_exit_no_save_close">Close</string>
    <string-array name="custom_sticker_keywords">
        <item>custom</item>
        <item>customized</item>
        <item>edit</item>
        <item>edited</item>
    </string-array>
    <string name="sticker_pack_thumbnail">Sticker pack thumbnail</string>
    <string name="pack_viewer_sticker_label">Sticker</string>
    <string name="selected_stickers">Stickers</string>
    <string name="title_activity_onboard">Welcome Screen</string>
    <string name="network_error">A network error occurred</string>
    <string name="no_network">No network connectivity</string>
    <string name="internet_required">Internet access is required</string>
    <string name="unexpected_error">Unexpected error :(</string>
    <string name="restoring_while_you_wait">Restoring from backup…</string>
    <string name="add_shortcut">Add shortcut to Home screen</string>
    <string name="filter_dialog_title">Filter Stickers</string>
    <string name="filter_dialog_show_header">Show:</string>
    <string name="filter_dialog_show_gifs">GIFs</string>
    <string name="filter_dialog_show_stills">Still images</string>
    <string name="filter_dialog_show_unedited">Unedited</string>
    <string name="filter_dialog_show_edited">Edited</string>
    <string name="filter_dialog_show_from">From packs:</string>
    <string name="filter_dialog_reset">Reset</string>
    <string name="filter_dialog_close">Close</string>
    <string name="filter_active_prefix">"Currently hiding "</string>
    <string name="filter_active_suffix">.</string>
    <string name="filter_active_joiner">", "</string>
    <string name="filter_active_final_joiner">" and "</string>
    <string name="filter_active_gifs">GIFs</string>
    <string name="filter_active_stills">still images</string>
    <string name="filter_active_edited">edited images</string>
    <string name="filter_active_unedited">unedited images</string>
    <string name="filter_active_pack">the %s pack</string>
    <string name="settings_updates_title">Sticker pack updates</string>
    <string name="settings_check_in_background_key">updates_check_background</string>
    <string name="settings_check_in_background">Check in the background</string>
    <string name="settings_check_in_background_summary">When enabled, &appname; will automatically check for sticker pack updates occasionally, only on Wi-Fi.</string>
    <string name="settings_update_in_background_key">updates_install_background</string>
    <string name="settings_update_in_background">Install automatically</string>
    <string name="settings_update_in_background_summary">When enabled, sticker pack updates will be installed in the background while on Wi-Fi.</string>
    <string name="settings_export_key">export</string>
    <string name="settings_export">Export configuration</string>
    <string name="settings_export_summary">Exports your &appname; settings, installed pack list, and edited stickers.</string>
    <string name="settings_import">Import configuration</string>
    <string name="settings_import_key">import</string>
    <string name="settings_import_summary">Imports a configuration file you previously exported.</string>
    <string name="settings_privacy_policy_key">privacy</string>
    <string name="settings_privacy_policy">Privacy policy</string>
    <string name="settings_oss_licenses_key">oss</string>
    <string name="settings_oss_licenses">Open source licenses</string>
    <string name="settings_refresh_firebase_key">refresh</string>
    <string name="settings_refresh_firebase">Re-register stickers</string>
    <string name="settings_refresh_firebase_summary">If Gboard isn\'t showing your stickers correctly, try re-registering them.</string>
    <string name="settings_refresh_firebase_complete">Re-registration complete</string>
    <string name="settings_about_key">about</string>
    <string name="settings_about">About &appname;</string>
    <string name="settings_about_text">\nVersion: %s\n\nVersion code: %d\n\nThis version published in %d by Sam Van Kooten</string>
    <string name="settings_theme_key">app_theme</string>
    <string name="settings_theme">App theme</string>
    <string name="settings_github_key">github</string>
    <string name="settings_github">View &appname; on GitHub</string>
    <string name="settings_force_updatable_key">updatable</string>
    <string name="settings_force_updatable">Make installed packs updatable</string>
    <string name="settings_force_updatable_summary">WARNING: Deletes stickers from all installed packs</string>
    <string name="settings_force_new_key">new_pack</string>
    <string name="settings_force_new">Forget a sticker pack</string>
    <string name="settings_force_new_summary">WARNING: Deletes a sticker pack</string>
    <string-array name="settings_theme_entries">
        <item>Match system theme</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="settings_theme_entries_values">
        <item>system</item>
        <item>light</item>
        <item>dark</item>
    </string-array>
    <string name="settings_theme_default_value">system</string>
    <string name="config_import_confirm_title">Import settings?</string>
    <string name="config_import_confirm_body">&lt;b>Erase&lt;/b> app configuration and replace it with the contents of %s?</string>
    <string name="notif_new_pack_title">New %s sticker pack available!</string>
    <string name="notif_new_pack_text">Tap to view.</string>
    <string name="ar_safety_title">AR Mode Safety</string>
    <string name="ar_safety_text">Be aware of your surroundings as you move your phone around. If you\'re a child, you should only use AR mode with parental supervision.</string>
    <string name="ar_safety_dont_remind">Don\'t remind me again</string>
</resources>