<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <PreferenceCategory
        app:key="updates"
        app:title="@string/settings_updates_title">
    
        <SwitchPreferenceCompat
            app:key="@string/settings_check_in_background_key"
            app:title="@string/settings_check_in_background"
            app:summary="@string/settings_check_in_background_summary"
            app:defaultValue="true"/>
    
        <SwitchPreferenceCompat
            app:key="@string/settings_update_in_background_key"
            app:title="@string/settings_update_in_background"
            app:summary="@string/settings_update_in_background_summary"
            app:defaultValue="true"/>

    </PreferenceCategory>

</PreferenceScreen>