<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item android:id="@+id/search"
          android:title="@string/search"
          android:icon="@drawable/icon_search"
          app:iconTint="@color/packViewerActivityToolbarIconColor"
          app:showAsAction="always|collapseActionView"
          app:actionViewClass="androidx.appcompat.widget.SearchView" />
    
    <item android:id="@+id/filter"
          android:title="@string/filter"
          android:icon="@drawable/icon_filter"
          app:iconTint="@color/packViewerActivityToolbarIconColor"
          app:showAsAction="always"/>
    
    <item android:id="@+id/add_shortcut"
          android:title="@string/add_shortcut"
          app:showAsAction="never" />
</menu>