<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        style="@style/ARGalleryTopRow"
        >

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0"
            android:contentDescription="@string/back_button"
            android:gravity="center"
            android:padding="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/back_icon"
            android:clickable="true"
            android:focusable="true"
            />

        <net.samvankooten.finnstickers.ar.GalleryRow
            android:id="@+id/gallery_pack_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scrollbars="none"
            android:requiresFadingEdge="horizontal"
            />
    
        <ImageView
            android:id="@+id/delete_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:contentDescription="@string/delete_button"
            android:gravity="center"
            android:padding="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/delete_icon"
            android:clickable="true"
            android:focusable="true"
            />
    
        <ImageView
            android:id="@+id/help_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0"
            android:contentDescription="@string/view_onboard"
            android:gravity="center"
            android:padding="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/help_icon"
            android:clickable="true"
            android:focusable="true"
            />
    </LinearLayout>
</merge>